[FEATURE] Add API Tokens for authorization
