# app/controllers/api/v1/api_controller.rb
@@ -8,6 +8,8 @@ module API
       rescue_from ActiveRecord::RecordInvalid,         with: :render_record_invalid
       rescue_from ActionController::ParameterMissing,  with: :render_parameter_missing
 
+      before_action :authenticate_api_key
+
       private
 
       def render_not_found(exception)
@@ -25,6 +27,13 @@ module API
       def render_error(exception, errors, status)
         logger.info { exception }
         render json: { errors: Array.wrap(errors) }, status:
+      end
+
+      def authenticate_api_key
+        api_key = request.headers['Authorization']
+        APIKey.find_token!(api_key || '')
+      rescue ActiveRecord::RecordNotFound
+        render_error(ActiveRecord::RecordNotFound, { message: I18n.t('errors.invalid_api_key') }, :unauthorized)
       end
     end
   end
